--- a/app/views/actor_templates/show.html.erb
+++ b/app/views/actor_templates/show.html.erb
@@ -1,122 +1,25 @@
-<h1>
-  Actor #<%= @the_actor.id %> details
-</h1>
-
-<a href="/actors">
-  Go back
-</a>
-
-<hr>
-
-<dl>
-  <dt>
-    Name
-  </dt>
-  <dd>
-    <%= @the_actor.name %>
-  </dd>
-
-  <dt>
-    Dob
-  </dt>
-  <dd>
-    <%= @the_actor.dob %>
-  </dd>
-
-  <dt>
-    Bio
-  </dt>
-  <dd>
-    <%= @the_actor.bio %>
-  </dd>
-
-  <dt>
-    Image
-  </dt>
-  <dd>
-    <img src="<%= @the_actor.image %>">
-  </dd>
-
-  <dt>
-    Created at
-  </dt>
-  <dd>
-    <%= @the_actor.created_at %>
-  </dd>
-
-  <dt>
-    Updated at
-  </dt>
-  <dd>
-    <%= @the_actor.updated_at %>
-  </dd>
-</dl>
-
-<hr>
-
-<h2>Filmography</h2>
-
-<table border="1">
+<% @the_actor.characters.each do |a_character| %>
   <tr>
-    <th>
-      Title
-    </th>
+    <td>
+      <%= a_character.movie.title %>
+    </td>
 
-    <th>
-      Year
-    </th>
+    <td>
+      <%= a_character.movie.year %>
+    </td>
 
-    <th>
-      Director
-    </th>
+    <td>
+      <%= a_character.movie.director.name %>
+    </td>
 
-    <th>
-      Character name
-    </th>
+    <td>
+      <%= a_character.name %>
+    </td>
 
-    <th>
-    </th>
+    <td>
+      <a href="/movies/<%= a_character.movie.id %>">
+        Show details
+      </a>
+    </td>
   </tr>
-
-  <% a_id = @the_actor.id %>
-
-  <% matching_characters = Character.where({ :actor_id => a_id }) %>
-
-  <% matching_characters.each do |a_character| %>
-    <% m_id = a_character.movie_id %>
-
-    <% matching_movies = Movie.where({ :id => m_id }) %>
-
-    <% the_movie = matching_movies.at(0) %>
-
-    <tr>
-      <td>
-        <%= the_movie.title %>
-      </td>
-
-      <td>
-        <%= the_movie.year %>
-      </td>
-
-      <td>
-        <% d_id = the_movie.director_id %>
-        
-        <% matching_directors = Director.where({ :id => d_id }) %>
-        
-        <% the_director = matching_directors.at(0) %>
-
-        <%= the_director.name %>
-      </td>
-
-      <td>
-        <%= a_character.name %>
-      </td>
-
-      <td>
-        <a href="/movies/<%= the_movie.id %>">
-          Show details
-        </a>
-      </td>
-    </tr>
-  <% end %>
-</table>
+<% end %>
